--- a/program.html
+++ b/program.html
@@ -54,7 +54,7 @@
     font-family: "Fira Sans", Sans-Serif;
     font-size: 16px;
     background: #fff;
-    margin: 5px;
+    margin: auto;
     border-collapse: collapse;
     text-align: left;
   }
@@ -73,6 +73,9 @@
     /* color: #669; */
     padding: 6px 8px;
   }
+  #hor-minimalist-b tr:nth-child(even) { 
+    background-color: rgb(236, 236, 236); 
+  } 
   /* #hor-minimalist-b tbody tr:hover td
   {
     color: #009;
@@ -89,7 +92,7 @@
   </thead>
   <tbody>
     <tr>
-      <td>10:30 AM to 12:15 PM ET</td>
+      <td valign="top">10:30 AM to 12:15 PM ET</td>
       <td colspan="3" style="width:81%;" valign="top">
         <ul>
 
@@ -104,39 +107,39 @@
       </ul></td>
     </tr>
     <tr>
-    <td>12:15 PM to 12:30 PM ET</td>
+    <td valign="top">12:15 PM to 12:30 PM ET</td>
       <td colspan="3">
         <i>Break</i>
       </td>
     </tr>
     <tr>
-    <td>12:30 PM to 1:00 PM ET</td>
+    <td valign="top">12:30 PM to 1:00 PM ET</td>
       <td colspan="3">
         <i>Poster Slam</i>
       </td>
     </tr>
     <tr>
-      <td>1:00 PM to 1:30 PM ET</td>
+      <td valign="top">1:00 PM to 1:30 PM ET</td>
         <td colspan="3">
           <i>Poster Session</i>
         </td>
       </tr>
     </tr>
     <tr>
-      <td>1:30 PM to 2:00 PM ET</td>
+      <td valign="top">1:30 PM to 2:00 PM ET</td>
         <td colspan="3">
           <i>Socialization and Poster Session</i>
         </td>
       </tr>
     </tr>
     <tr>
-      <td>2:00 PM to 2:15 PM ET</td>
+      <td valign="top">2:00 PM to 2:15 PM ET</td>
         <td colspan="3">
           <i>Break</i>
         </td>
       </tr>
     <tr>
-      <td>2:15 PM to 4:00 PM ET</td>
+      <td valign="top">2:15 PM to 4:00 PM ET</td>
       <td colspan="3"valign="top">
         <ul>
 
@@ -162,7 +165,7 @@
   </thead>
   <tbody>
     <tr>
-      <td>10:30 AM to 12:15 PM ET</td>
+      <td valign="top">10:30 AM to 12:15 PM ET</td>
       <td style="width:27%;"valign="top">
         <u><strong>Network Games 1</strong></u>
         <ul>
@@ -199,38 +202,38 @@
       </ul></td>
     </tr>
     <tr>
-    <td>12:15 PM to 12:30 PM ET</td>
+    <td valign="top">12:15 PM to 12:30 PM ET</td>
       <td colspan="3">
         <i>Break</i>
       </td>
     </tr>
     <tr>
-    <td>12:30 PM to 1:00 PM ET</td>
+    <td valign="top">12:30 PM to 1:00 PM ET</td>
       <td colspan="3">
         <i>Poster Slam</i>
       </td>
     </tr>
     <tr>
-      <td>1:00 PM to 1:30 PM ET</td>
+      <td valign="top">1:00 PM to 1:30 PM ET</td>
         <td colspan="3">
           <i>Poster Session</i>
         </td>
     </tr>
     <tr>
-      <td>1:30 PM to 2:00 PM ET</td>
+      <td valign="top">1:30 PM to 2:00 PM ET</td>
         <td colspan="3">
           <i>Socialization and Poster Session</i>
         </td>
       </tr>
     </tr>
     <tr>
-      <td>2:00 PM to 2:15 PM ET</td>
+      <td valign="top">2:00 PM to 2:15 PM ET</td>
         <td colspan="3">
           <i>Break</i>
         </td>
       </tr>
     <tr>
-      <td>2:15 PM to 4:00 PM ET</td>
+      <td valign="top">2:15 PM to 4:00 PM ET</td>
       <td style="width:27%;"valign="top">
         <u><strong>Peer Effects 1</strong></u>
         <ul>
@@ -280,7 +283,7 @@
   </thead>
   <tbody>
     <tr>
-      <td>10:30 AM to 12:15 PM ET</td>
+      <td valign="top">10:30 AM to 12:15 PM ET</td>
       <td style="width:27%;"valign="top">
         <u><strong>Network Formation 1 & 2</strong></u>
         <ul>
@@ -333,13 +336,13 @@
       </ul></td>
     </tr>
     <tr>
-    <td>12:15 PM to 12:30 PM ET</td>
+    <td valign="top">12:15 PM to 12:30 PM ET</td>
       <td colspan="3">
         <i>Break</i>
       </td>
     </tr>
     <tr>
-      <td>12:30 PM to 2:15 PM ET</td>
+      <td valign="top">12:30 PM to 2:15 PM ET</td>
       <td style="width:27%;"valign="top">
         <u><strong>IO 1</strong></u>
         <ul>
@@ -375,19 +378,19 @@
       </ul></td>
     </tr>
     <tr>
-      <td>2:15 PM to 2:45 PM ET</td>
+      <td valign="top">2:15 PM to 2:45 PM ET</td>
         <td colspan="3">
           <i>Socialization</i>
         </td>
       </tr>
     <tr>
-      <td>2:45 PM to 3:00 PM ET</td>
+      <td valign="top">2:45 PM to 3:00 PM ET</td>
         <td colspan="3">
           <i>Break</i>
         </td>
       </tr>
       <tr>
-        <td>3:00 PM to 4:45 PM ET</td>
+        <td valign="top">3:00 PM to 4:45 PM ET</td>
         <td style="width:27%;"valign="top">
           <u><strong>IO 2</strong></u>
           <ul>
