--- a/program.html
+++ b/program.html
@@ -133,7 +133,7 @@
     <tr>
       <td valign="top">1:30 PM to 2:00 PM ET</td>
         <td colspan="3">
-          <i>Socialization and Poster Session</i>
+          <i>Socializing and Poster Session</i>
         </td>
       </tr>
     </tr>
@@ -236,7 +236,7 @@
     <tr>
       <td valign="top">1:50 PM to 2:20 PM ET</td>
         <td colspan="3">
-          <i>Socialization and Poster Session</i>
+          <i>Socializing and Poster Session</i>
         </td>
       </tr>
     </tr>
@@ -383,7 +383,7 @@
     <tr>
       <td valign="top">2:15 PM to 2:45 PM ET</td>
         <td colspan="3">
-          <i>Socialization</i>
+          <i>Socializing</i>
         </td>
       </tr>
     <tr>
