--- a/program.html
+++ b/program.html
@@ -170,7 +170,7 @@
   </thead>
   <tbody>
     <tr>
-      <td valign="top">10:30 AM to 12:35 PM ET</td>
+      <td valign="top">10:30 AM to 12:20 PM ET</td>
       <td style="width:27%;"valign="top">
         <u><strong>Network Games 1</strong></u>
         <ul>
@@ -216,7 +216,7 @@
       </ul></td>
     </tr>
     <tr>
-    <td valign="top">12:35 PM to 12:50 PM ET</td>
+    <td valign="top">12:20 PM to 12:50 PM ET</td>
       <td colspan="3">
         <i>Break</i>
       </td>
@@ -241,13 +241,13 @@
       </tr>
     </tr>
     <tr>
-      <td valign="top">2:20 PM to 2:35 PM ET</td>
+      <td valign="top">2:20 PM to 2:40 PM ET</td>
         <td colspan="3">
           <i>Break</i>
         </td>
       </tr>
     <tr>
-      <td valign="top">2:35 PM to 4:20 PM ET</td>
+      <td valign="top">2:40 PM to 4:00 PM ET</td>
       <td style="width:27%;"valign="top">
         <u><strong>Peer Effects</strong></u>
         <ul>
@@ -297,7 +297,7 @@
   </thead>
   <tbody>
     <tr>
-      <td valign="top">10:30 AM to 12:15 PM ET</td>
+      <td valign="top">10:30 AM to 11:50 AM ET</td>
       <td style="width:27%;"valign="top">
         <u><strong>Learning 1</strong></u>
         <ul>
@@ -336,13 +336,13 @@
       </ul></td>
     </tr>
     <tr>
-    <td valign="top">12:15 PM to 12:30 PM ET</td>
+    <td valign="top">11:50 AM to 12:30 PM ET</td>
       <td colspan="3">
-        <i>Break</i>
+        <i>Break and socializing</i>
       </td>
     </tr>
     <tr>
-      <td valign="top">12:30 PM to 2:15 PM ET</td>
+      <td valign="top">12:30 PM to 1:50 PM ET</td>
       <td style="width:27%;"valign="top">
         <u><strong>IO 2</strong></u>
         <ul>
@@ -381,19 +381,19 @@
       </ul></td>
     </tr>
     <tr>
-      <td valign="top">2:15 PM to 2:45 PM ET</td>
+      <td valign="top">1:50 PM to 2:30 PM ET</td>
         <td colspan="3">
           <i>Socializing</i>
         </td>
       </tr>
     <tr>
-      <td valign="top">2:45 PM to 3:00 PM ET</td>
+      <td valign="top">2:30 PM to 2:40 PM ET</td>
         <td colspan="3">
           <i>Break</i>
         </td>
       </tr>
       <tr>
-        <td valign="top">3:00 PM to 4:45 PM ET</td>
+        <td valign="top">2:40 PM to 4:00 PM ET</td>
         <td style="width:27%;"valign="top">
           <u><strong>Learning 2</strong></u>
           <ul>
