--- a/program.html
+++ b/program.html
@@ -51,7 +51,7 @@
   </style>
 <h2>The conference will be hosted at <a href="https://spatial.chat/s/NetSciEcon6">spatial.chat</a>. </h2>
 <h2>(Click the link above to access.)</h2>
-<p>Presentations will last 15 minutes, with a 5 minute discussion period after each talk and a 5 minute break after the first two talks.</p>
+<p>Presentations will last 18 minutes, with 2 minutes for questions and changeovers. There will be a 5 minute break after the first two talks in each session.</p>
 
 <style>
   #hor-minimalist-b
