Fix relative links for new deploy

--- a/program.html
+++ b/program.html
@@ -21,7 +21,7 @@
 <div class="container">
 <h1 class="sr-only">6th Annual Conference on Network Science and Economics</h1>
 <div class="navbar-logo">
-<a href="/netsciecon21"><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
+<a href="/"><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
 </div>
 <nav class="navbar navbar-expand-lg navbar-light">
 <a class="navbar-brand" href=""><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
@@ -30,7 +30,7 @@
 </button>
 <div class="collapse navbar-collapse justify-content-md-center" id="main-navbar">
 <ul id="primaryNav" class="navbar-nav">
-<li class="nav-item"><a href="/netsciecon21" class="nav-link">Home</a></li>
+<li class="nav-item"><a href="/" class="nav-link">Home</a></li>
 <li class="nav-item"><a href="program" class="nav-link">Program and Location</a></li>
 </ul>
 </div>
