--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:type" content="website" />
 <meta name="twitter:description" content="6th Annual Conference on Network Science and Economics" />
 <meta name="og:description" content="6th Annual Conference on Network Science and Economics" />
-<meta property="og:url" content="/netsciecon21" />
+<meta property="og:url" content="/" />
 <meta property="og:site_name" content="6th Annual Conference on Network Science and Economics" />
 <link rel="stylesheet" href="css/localfonts.css" type="text/css" /><link rel="stylesheet" href="css/bootstrap.min.css" />
 <link rel="stylesheet" href="css/default.css" />
@@ -21,16 +21,16 @@
 <div class="container">
 <h1 class="sr-only">6th Annual Conference on Network Science and Economics</h1>
 <div class="navbar-logo">
-<a href="/netsciecon21"><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
+<a href="/"><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
 </div>
 <nav class="navbar navbar-expand-lg navbar-light">
-<a class="navbar-brand" href="/netsciecon21"><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
+<a class="navbar-brand" href="/"><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle Navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse justify-content-md-center" id="main-navbar">
 <ul id="primaryNav" class="navbar-nav">
-<li class="nav-item"><a href="/netsciecon21" class="nav-link">Home</a></li>
+<li class="nav-item"><a href="/" class="nav-link">Home</a></li>
 <li class="nav-item"><a href="program" class="nav-link">Program and Location</a></li>
 </ul>
 </div>
