--- a/program.html
+++ b/program.html
@@ -150,7 +150,7 @@
 
         <li><strong>International Trade and Social Connectedness</strong> <br><i>Rob Richmond</i></li>
         
-        <li><strong>How Automation that Substitutes for Labor Affects Production Networks, Growth, and Income Inequality</strong> <br><i>Matthew O. Jackson and Zafer Kanic</i></li>
+        <li><strong>How Automation that Substitutes for Labor Affects Production Networks, Growth, and Income Inequality</strong> <br><i>Matthew O. Jackson and Zafer Kanik</i></li>
 
         <li><strong>Capability Accumulation and Conglomeratization in the Information Age</strong> <br><i>Matt Elliott</i></li>
 
