--- a/program.html
+++ b/program.html
@@ -398,7 +398,7 @@
           <u><strong>Learning 2</strong></u>
           <ul>
   
-          <li><strong>Slow Observational Learning and Reputation Failures</strong> <br><i>Harry Pei</i></li>
+          <li><strong>Reputation Building under Obervational Learning</strong> <br><i>Harry Pei</i></li>
         
           <li><strong>The Geography of Beliefs</strong> <br><i>Raman Uppal</i></li>
     
