--- a/program.html
+++ b/program.html
@@ -15,6 +15,33 @@
 <meta property="og:site_name" content="6th Annual Conference on Network Science and Economics" />
 <link rel="stylesheet" href="css/localfonts.css" type="text/css" /><link rel="stylesheet" href="css/bootstrap.min.css" />
 <link rel="stylesheet" href="css/default.css" />
+<style>
+  /* Style the button that is used to open and close the collapsible content */
+  .collapsible {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+    background-color: #ccc;
+  }
+
+  /* Style the collapsible content. Note: hidden by default */
+  .content2 {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+  }
+</style>
 </head>
 <body>
 <header class="main-header">
@@ -85,7 +112,6 @@
   {
     color: #009;
   } */
-  
   </style>
 
 <table id="hor-minimalist-b" class="center">
@@ -176,7 +202,13 @@
         <ul>
 
         <li><strong>Free Riding in Networks</strong> <br><i>Luca Paolo Merlino</i></li>
-        
+        <button type="button" class="collapsible">Abstract</button>
+        <div class="content2">
+          <p>
+            This is the abstract
+          </p>
+        </div>
+
         <li><strong>Perceived Competition in Networks</strong> <br><i>Yves Zenou</i></li>
 
         <li><strong>Attack and Interception in Networks</strong> <br><i>Francis Bloch, Bhaskar Dutta, and Kalyan Chatterjee</i></li>
@@ -457,6 +489,22 @@
 </div>
 </div>
 </footer>
+<script>
+  var coll = document.getElementsByClassName("collapsible");
+  var i;
+
+  for (i = 0; i < coll.length; i++) {
+    coll[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var content = this.nextElementSibling;
+      if (content.style.display === "block") {
+        content.style.display = "none";
+      } else {
+        content.style.display = "block";
+      }
+    });
+  }
+</script>
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/jquery-ui.min.js"></script>
 <script src="js/popper.min.js"></script>
