Update padding & Chrome warning

--- a/program.html
+++ b/program.html
@@ -54,7 +54,7 @@
 <script>
   var isChrome = (navigator.userAgent.indexOf("Chrome") != -1);
   if (!isChrome) {
-    document.write("<h2 style=\"background-color:tomato;\">You are not using Google Chrome! Please switch to Chrome to access the spatial.chat page.</h2>")
+    document.write("<h2 style=\"background-color:tomato;\">You seem not to be using Google Chrome. Please <a href=\"https://www.google.com/chrome/\">download Chrome</a> and use that to access spatial.chat.</h2>")
   }
 </script>
 <p>Presentations will last 18 minutes, with 2 minutes for questions and changeovers. There will be a 5 minute break after the first two talks in each session.</p>
@@ -99,7 +99,7 @@
     background-color: #eee;
     color: #444;
     cursor: pointer;
-    padding: 18px;
+    padding: 5px;
     width: 100%;
     border: none;
     text-align: left;
