Move Friday to Amphitheater

--- a/program.html
+++ b/program.html
@@ -134,7 +134,7 @@
     <tr>
       <td valign="top">10:30 AM to 12:15 PM ET</td>
       <td colspan="3" style="width:81%;" valign="top">
-        <u><strong>Nashville</strong></u>
+        <u><strong>Amphitheater</strong></u>
         <ul>
 
           <li><strong>Network Topology and Market Structure</strong> <br><i>Ying-Ju Chen - HKUST, Yves Zenou - Monash, Junjie Zhou - NUS</i></li>
@@ -214,7 +214,7 @@
     <tr>
       <td valign="top">2:15 PM to 4:00 PM ET</td>
       <td colspan="3"valign="top">
-        <u><strong>Nashville</strong></u>
+        <u><strong>Amphitheater</strong></u>
         <ul>
 
         <li><strong>International Trade and Social Connectedness</strong> <br><i>Michael Bailey - Facebook, Abhinav Gupta - NYU Stern, Sebastian Hillenbrand - NYU Stern, Theresa Kuchler - NYU Stern, Robert Richmond - NYU Stern, Johannes Stroebel - NYU Stern</i></li>
