Add announcements tab

--- a/announcements.html
+++ b/announcements.html
@@ -4,14 +4,14 @@
 
 <link rel="icon" href="img/favicon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>6th Annual Conference on Network Science and Economics</title>
+<title>Announcements | 6th Annual Conference on Network Science and Economics</title>
 <meta name="description" content="6th Annual Conference on Network Science and Economics">
-<meta name="twitter:title" content="Home" />
-<meta name="og:title" content="Home" />
+<meta name="twitter:title" content="Announcements" />
+<meta name="og:title" content="Announcements" />
 <meta property="og:type" content="website" />
 <meta name="twitter:description" content="6th Annual Conference on Network Science and Economics" />
 <meta name="og:description" content="6th Annual Conference on Network Science and Economics" />
-<meta property="og:url" content="/" />
+<meta property="og:url" content="announcements" />
 <meta property="og:site_name" content="6th Annual Conference on Network Science and Economics" />
 <link rel="stylesheet" href="css/localfonts.css" type="text/css" /><link rel="stylesheet" href="css/bootstrap.min.css" />
 <link rel="stylesheet" href="css/default.css" />
@@ -24,7 +24,7 @@
 <a href="/"><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
 </div>
 <nav class="navbar navbar-expand-lg navbar-light">
-<a class="navbar-brand" href="/"><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
+<a class="navbar-brand" href=""><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
 <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="true" aria-label="Toggle Navigation">
 <span class="navbar-toggler-icon"></span>
 </button> -->
@@ -38,28 +38,26 @@
 </nav>
 </div>
 </header>
-<div class="homepage-image homepage-image-behind-issue"><img srcset = "img/homepage-480w.png 480w, img/homepage-960w.png 960w, img/homepage-1920w.png 1920w" sizes = "(maxwidth: 800px)480w, (maxwidth: 1440px)960w, 1920w" src = "img/homepage-960w.png" alt = "Neurons artwork homepage image. CC0 Geralt/Pixabay id-582054"></div>
-<div class="container container-homepage-issue">
-<div class="h1 homepage-issue-identifier"><br><br><br>March 26-28, 2021<br><br><br></div>
-<div class="row justify-content-center homepage-issue-header">
-
-<div class="col-lg-9">
-<div class="homepage-issue-description-wrapper">
-<div class="homepage-issue-description">
-<div class="h2">Welcome!</div>
-<p> The first day will be a one-track special theme session entitled "<strong>Networked Markets</strong>." The remaining days will run with parallel sessions on all topics in the series' broader theme of networks in economics. 
-    This conference is part of an NSF-sponsored series entitled “Network Science in Economics.”</p>
+<div class="container page-custom">
+<div class="row page-header justify-content-md-center">
+<div class="col-md-8">
+<h1>Announcements</h1>
 </div>
 </div>
-</div>
-</div>
-<div class="row justify-content-center">
-<div class="col-12 col-lg-9">
-<div class="issue-toc">
-</div>
+<div class="row justify-content-md-center">
+<div class="col-md-8">
+<div class="page-content">
+  <style>
+    h2 {text-align: center;}
+  </style>
+<p>
+  <ul>
+  <li><strong>[March 24, 2021]</strong> Test announcement</li> 
+  </ul>
+</p>
 
 </div>
-
+</div>
 </div>
 </div>
 <footer class="site-footer">
