--- a/program.html
+++ b/program.html
@@ -25,12 +25,13 @@
 </div>
 <nav class="navbar navbar-expand-lg navbar-light">
 <a class="navbar-brand" href=""><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle Navigation">
+<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="true" aria-label="Toggle Navigation">
 <span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse justify-content-md-center" id="main-navbar">
+</button> -->
+<div class="navbar-collapse justify-content-md-center" id="main-navbar">
 <ul id="primaryNav" class="navbar-nav">
 <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+<li class="nav-item"><a href="announcements" class="nav-link">Announcements</a></li>
 <li class="nav-item"><a href="program" class="nav-link">Program and Location</a></li>
 </ul>
 </div>
