Add posters program

--- a/program.html
+++ b/program.html
@@ -195,14 +195,14 @@
     <tr>
       <td valign="top">1:00 PM to 1:30 PM ET</td>
         <td colspan="3">
-          <i>Poster Session</i>
+          <i>Poster Session (See <a href="posters">Posters program</a>.)</i>
         </td>
       </tr>
     </tr>
     <tr>
       <td valign="top">1:30 PM to 2:00 PM ET</td>
         <td colspan="3">
-          <i>Socializing and Poster Session</i>
+          <i>Socializing and Poster Session (See <a href="posters">Posters program</a>.)</i>
         </td>
       </tr>
     </tr>
@@ -390,13 +390,13 @@
     <tr>
       <td valign="top">1:20 PM to 1:50 PM ET</td>
         <td colspan="3">
-          <i>Poster Session</i>
+          <i>Poster Session (See <a href="posters">Posters program</a>.)</i>
         </td>
     </tr>
     <tr>
       <td valign="top">1:50 PM to 2:20 PM ET</td>
         <td colspan="3">
-          <i>Socializing and Poster Session</i>
+          <i>Socializing and Poster Session (See <a href="posters">Posters program</a>.)</i>
         </td>
       </tr>
     </tr>
