--- a/posters.html
+++ b/posters.html
@@ -130,7 +130,7 @@
 
 <h2>March 26, 2021</h2>
 
-<u style="font-size:16px"><strong>Applied and Experimental Misc</strong></u><ul>
+<u style="font-size:16px"><strong>Applied and Experimental</strong></u><ul>
 <li style="font-size:16px"><strong>Managing Participation and Transactions on a Digital Platform</strong> <br><i>Paul Belleflamme - UCLouvain, Muxin Li* - UCLouvain</i>
 </li>
 <button type="button" class="collapsible">Abstract</button>
