--- a/announcements.html
+++ b/announcements.html
@@ -52,7 +52,7 @@
   </style>
 <p>
   <ul>
-  <li><strong>[March 24, 2021]</strong> Test announcement</li> 
+  <li><strong>[March 25, 2021]</strong> <a href="instructions">Instructions for Accessing Virtual Space</a></li> 
   </ul>
 </p>
 
