--- a/program.html
+++ b/program.html
@@ -49,9 +49,10 @@
 <div class="page-content">
   <style>
     h2 {text-align: center;}
+    h4 {text-align: center;}
   </style>
-<h2>The conference will be hosted at <a href="https://spatial.chat/s/NetSciEconExperimentation">spatial.chat</a>. </h2>
-<h2>(Click the link above to access an experimental space to play around with.)</h2>
+<h2>The conference will be hosted at <a href="https://spatial.chat/s/NetSciEcon6">spatial.chat</a>. </h2>
+<h4>(If you need the password, please email <a href="mailto:networksciecon@gmail.com">networksciecon@gmail.com</a>.)</h4>
 <script>
   var isChrome = (navigator.userAgent.indexOf("Chrome") != -1);
   if (!isChrome) {
