--- a/posters.html
+++ b/posters.html
@@ -168,6 +168,8 @@ consequence, firm output. I exploit data from a unique field experiment in Mozam
 significant increases in work hours and pro-social behavior. Exploiting variation in the observability of peer characteristics, I show that the treatment is particularly effective when subjects observe that the most successful peer is a woman. Low-performers that, additionally to their own ranking, observe
 a female top seller, outperform at baseline high-performers by 14%.
 </div>
+<li style="font-size:16px"><strong>Classroom Networks and School Victimization: How Personality Protects Children Socially</strong> <br><i>Manuel Eisner - Cambridge, Denis Ribeaud - Zurich, Torsten Santavirta* - Uppsala, Miguel Sarzosa - Purdue</i>
+</li>
 </ul></td>
 <u style="font-size:16px"><strong>Beliefs</strong></u><ul>
 <li style="font-size:16px"><strong>Fast-Growing Networks and Distrust in Science (Even without Fake News)</strong> <br><i>Zaruhi Hakobyan - U Luxembourg, Christos Koulovatianos* - U Luxembourg</i><br>
