--- a/program.html
+++ b/program.html
@@ -52,6 +52,7 @@
     h4 {text-align: center;}
   </style>
 <h2>The conference will be hosted at <a href="https://spatial.chat/s/NetSciEcon6">spatial.chat</a>. </h2>
+<h4>Instructions for interacting with the space are available <a href="instructions-guests">here</a>.</h4>
 <h4>(If you need the password, please email <a href="mailto:networksciecon@gmail.com">networksciecon@gmail.com</a>.)</h4>
 <script>
   var isChrome = (navigator.userAgent.indexOf("Chrome") != -1);
