--- a/program.html
+++ b/program.html
@@ -61,6 +61,8 @@
   }
 </script>
 <p>Presentations will last 18 minutes, with 2 minutes for questions and changeovers. There will be a 5 minute break after the first two talks in each session.</p>
+  
+  <p>All times are listed in US Eastern Daylight Time.</p>
 
 <style>
   #hor-minimalist-b
