--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
 
 <link rel="icon" href="img/favicon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>6th Annual Conference on Network Science and Economics</title>
-<meta name="description" content="6th Annual Conference on Network Science and Economics">
+<title>7th Annual Conference on Network Science and Economics</title>
+<meta name="description" content="7th Annual Conference on Network Science and Economics">
 <meta name="twitter:title" content="Home" />
 <meta name="og:title" content="Home" />
 <meta property="og:type" content="website" />
-<meta name="twitter:description" content="6th Annual Conference on Network Science and Economics" />
-<meta name="og:description" content="6th Annual Conference on Network Science and Economics" />
+<meta name="twitter:description" content="7th Annual Conference on Network Science and Economics" />
+<meta name="og:description" content="7th Annual Conference on Network Science and Economics" />
 <meta property="og:url" content="/" />
-<meta property="og:site_name" content="6th Annual Conference on Network Science and Economics" />
+<meta property="og:site_name" content="7th Annual Conference on Network Science and Economics" />
 <link rel="stylesheet" href="css/localfonts.css" type="text/css" /><link rel="stylesheet" href="css/bootstrap.min.css" />
 <link rel="stylesheet" href="css/default.css" />
 </head>
 <body>
 <header class="main-header">
 <div class="container">
-<h1 class="sr-only">6th Annual Conference on Network Science and Economics</h1>
+<h1 class="sr-only">7th Annual Conference on Network Science and Economics</h1>
 <div class="navbar-logo">
-<a href="/"><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
+<a href="/"><span class="navbar-logo-text">7th Annual Conference on Network Science and Economics</span></a>
 </div>
 <nav class="navbar navbar-expand-lg navbar-light">
-<a class="navbar-brand" href="/"><span class="navbar-logo-text">6th Annual Conference on Network Science and Economics</span></a>
+<a class="navbar-brand" href="/"><span class="navbar-logo-text">7th Annual Conference on Network Science and Economics</span></a>
 <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="true" aria-label="Toggle Navigation">
 <span class="navbar-toggler-icon"></span>
 </button> -->
@@ -40,15 +40,40 @@
 </header>
 <div class="homepage-image homepage-image-behind-issue"><img srcset = "img/homepage-480w.png 480w, img/homepage-960w.png 960w, img/homepage-1920w.png 1920w" sizes = "(maxwidth: 800px)480w, (maxwidth: 1440px)960w, 1920w" src = "img/homepage-960w.png" alt = "Neurons artwork homepage image. CC0 Geralt/Pixabay id-582054"></div>
 <div class="container container-homepage-issue">
-<div class="h1 homepage-issue-identifier"><br><br><br>March 26-28, 2021<br><br><br></div>
+<div class="h1 homepage-issue-identifier"><br><br><br>March 18-20, 2022<br><br><br></div>
 <div class="row justify-content-center homepage-issue-header">
 
 <div class="col-lg-9">
 <div class="homepage-issue-description-wrapper">
 <div class="homepage-issue-description">
 <div class="h2">Welcome!</div>
-<p> The first day will be a one-track special theme session entitled "<strong>Networked Markets</strong>." The remaining days will run with parallel sessions on all topics in the series' broader theme of networks in economics. 
-    This conference is part of an NSF-sponsored series entitled “Network Science in Economics.”</p>
+<p> 
+    The paper submission deadline for the Seventh Annual Conference on Network Science and Economics is extended to January 31st, 2022. The conference will be held in-person at the University of Chicago’s Booth School of Business on March 18-20, 2022.
+
+Due to the evolving COVID-19 situation, there may be some adjustments to the conference dates and modality. Please submit your work now even if you are unsure if you will be able to travel. The first day, Friday, March 18, will be a single-track special theme session on (Mis)information in networks. The organizers especially encourage submissions within this theme. The remaining days will run with parallel sessions on all topics in the series' broader theme of networks in economics, which include:
+learning in networks 
+selling information 
+interfirm networks
+diffusion
+strategic marketing and influence maximization
+peer effects
+homophily
+network centrality
+networks in international trade
+networks of alliances and conflict
+financial networks
+models of network formation
+games on networks
+exchange and intermediation
+econometrics and statistics of networks
+Papers should be submitted via email to networksciecon@gmail.com. Please indicate whether you are submitting for the first day special theme session or the open conference. A preliminary program will be announced by February 18, 2022. No conference proceedings will be published.
+
+While extended abstracts are acceptable, full papers are encouraged. Young scholars are particularly encouraged to submit papers. Speakers' expenses will be partially reimbursed, with amounts depending on funding. The conference will make a special effort to support the attendance of junior presenters without their own travel funding.
+
+The conference website (https://netsciecon.org/)  will be updated to include information about lodging, location, and other details. 
+
+The conference is sponsored by the National Science Foundation, with additional support from the Booth School of Business and the Becker Friedman Institute, and is part of an NSF-sponsored series, Network Science in Economics. It aims to foster the development and dissemination of cutting edge research in network theory.
+    </p>
 </div>
 </div>
 </div>
