--- a/index.html
+++ b/index.html
@@ -48,9 +48,14 @@
 <div class="homepage-issue-description">
 <div class="h2">Welcome!</div>
 <p> 
-    The paper submission deadline for the Seventh Annual Conference on Network Science and Economics is extended to January 31st, 2022. The conference will be held in-person at the University of Chicago’s Booth School of Business on March 18-20, 2022.
+    The paper submission deadline for the Seventh Annual Conference on Network Science and Economics is extended to January 31st, 2022. The conference will be held in-person at the University of Chicago’s Booth School of Business on March 18-20, 2022. </p> 
 
-Due to the evolving COVID-19 situation, there may be some adjustments to the conference dates and modality. Please submit your work now even if you are unsure if you will be able to travel. The first day, Friday, March 18, will be a single-track special theme session on (Mis)information in networks. The organizers especially encourage submissions within this theme. The remaining days will run with parallel sessions on all topics in the series' broader theme of networks in economics, which include:
+    <p> 
+Due to the evolving COVID-19 situation, there may be some adjustments to the conference dates and modality. Please submit your work now even if you are unsure if you will be able to travel. </p> 
+        
+
+<p>     
+The first day, Friday, March 18, will be a single-track special theme session on (Mis)information in networks. The organizers especially encourage submissions within this theme. The remaining days will run with parallel sessions on all topics in the series' broader theme of networks in economics, which include:</p> 
 learning in networks 
 selling information 
 interfirm networks
