--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="homepage-issue-description">
 <div class="h2">Welcome!</div>
 <p> 
-    The paper submission deadline for the Seventh Annual Conference on Network Science and Economics is extended to January 31st, 2022. The conference will be held in-person at the University of Chicago’s Booth School of Business on March 18-20, 2022. </p> 
+    The paper submission deadline for the Seventh Annual Conference on Network Science and Economics is extended to <b>January 31st, 2022</b>. The conference will be held in-person at the University of Chicago’s Booth School of Business on <b>March 18-20, 2022</b>. </p> 
 
     <p> 
 Due to the evolving COVID-19 situation, there may be some adjustments to the conference dates and modality. Please submit your work now even if you are unsure if you will be able to travel. </p> 
@@ -112,7 +112,7 @@ The first day, Friday, March 18, will be a single-track special theme session on
 
 
 <p>
-Papers should be submitted via email to networksciecon@gmail.com. Please indicate whether you are submitting for the first day special theme session or the open conference. A preliminary program will be announced by February 18, 2022. No conference proceedings will be published.
+Papers should be submitted via email to networksciecon@gmail.com. Please indicate whether you are submitting for the first day special theme session or the open conference. A preliminary program will be announced by <b>February 18, 2022</b>. No conference proceedings will be published.
     </p>
 
 <p>    
