--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class="h1 homepage-issue-identifier"><br><br><br>March 18-20, 2022<br><br><br></div>
 <div class="row justify-content-center homepage-issue-header">
 
-<div class="col-lg-19">
+<div class="col-lg-9">
 <div class="homepage-issue-description-wrapper">
 <div class="homepage-issue-description">
 <div class="h2">Welcome!</div>
@@ -147,7 +147,7 @@ While extended abstracts are acceptable, full papers are encouraged. Young schol
 </div>
 <div class="container site-footer-content">
 <div class="row">
-<div class="col-md site-footer-content align-self-center">
+<div class="col-md site-footer-content align-self-end">
 <p>Organized by Ozan Candogan, Arun Chandrasekhar, Ben Golub, Matt Jackson, and Sudipta Sarangi<br>Website by Rithvik Rao based on <a href="https://themes.gohugo.io/health-science-journal/">Health Science Journal</a> theme</p>
 </div>
 <div class="col-md col-md-2 align-self-center text-right">
