--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ While extended abstracts are acceptable, full papers are encouraged. Young schol
 </div>
 <div class="container site-footer-content">
 <div class="row">
-<div class="col-md site-footer-content align-self-end">
+<div class="col-md site-footer-content align-self-center">
 <p>Organized by Ozan Candogan, Arun Chandrasekhar, Ben Golub, Matt Jackson, and Sudipta Sarangi<br>Website by Rithvik Rao based on <a href="https://themes.gohugo.io/health-science-journal/">Health Science Journal</a> theme</p>
 </div>
 <div class="col-md col-md-2 align-self-center text-right">
