--- a/index.html
+++ b/index.html
@@ -137,6 +137,15 @@ While extended abstracts are acceptable, full papers are encouraged. Young schol
 
 </div>
 </div>
+    <div class="row justify-content-center">
+<div class="col-12 col-lg-9">
+<div class="issue-toc">
+</div>
+
+</div>
+
+</div>
+    
 <footer class="site-footer">
 <div class="container site-footer-content">
 <div class="row">
